fix qlin.txt location issue